# chocolate-doom

./: .clang-format  .gitignore  .gitmodules  .lvimrc  .travis.sh  .travis.yml  AUTHORS  BUGS  CHANGELOG.md  CLAUDE_CODE_WORKSHOP.md  CMakeLists.txt  CNChangeLog  CNDOOM  CNDOOM.TXT  CODE_OF_CONDUCT.md  ChangeLog  Chocolate Doom Installer.sed  EFFECTS.MD  HACKING  HACKING.md  HH-TODO  INSTALL  INSTALL.BAT  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  NOT-BUGS  NOT-BUGS.md  OPL-TODO  PHILOSOPHY  PHILOSOPHY.md  README  README.Crispy.htm  README.Music  README.Music.md  README.OPL  README.Strife  README.Strife.md  (+27 more)
chocolate-doom/: BUGS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  configure.in  dummy.txt
chocolate-doom/codeblocks/: chocolate-doom.cbp  chocolate-doom.workspace  chocolate-server.cbp  chocolate-setup.cbp  textscreen.cbp
chocolate-doom/man/: Makefile  Makefile.am  chocolate-doom-options.in  docgen  doom-options.in  foot  footer
chocolate-doom/msvc/: config.h
chocolate-doom/pcsound/: Makefile.am  pcsound.c
chocolate-doom/setup/: Makefile.am  compatibility.c  configfile.c  display.c  execute.c  execute.h  joystick.c  keyboard.c  mainmenu.c  mouse.c  multiplayer.c  multiplayer.h  sound.c  txt_joybinput.c  txt_joybinput.h  txt_keyinput.c  txt_mouseinput.c
chocolate-doom/src/: Makefile.am  am_map.c  convert-icon  d_englsh.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_main.c  d_main.h  d_net.c  d_net.h  d_textur.h  d_think.h  d_ticcmd.h  deh_ammo.c  deh_cheat.c  deh_defs.h  deh_frame.c  deh_io.c  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_misc.c  deh_misc.h  deh_ptr.c  deh_sound.c  deh_text.c  deh_thing.c  deh_weapon.c  doomdef.h  doomfeatures.h  doomkeys.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  (+119 more)
chocolate-doom/textscreen/: Makefile.am  guitest.c  txt_button.c  txt_checkbox.c  txt_desktop.c  txt_desktop.h  txt_dropdown.c  txt_gui.c  txt_inputbox.c  txt_inputbox.h  txt_io.c  txt_label.c  txt_label.h  txt_main.c  txt_main.h  txt_radiobutton.c  txt_sdl.c  txt_separator.c  txt_spinctrl.c  txt_spinctrl.h  txt_strut.c  txt_strut.h  txt_table.c  txt_table.h  txt_widget.c  txt_widget.h  txt_window.c  txt_window.h  txt_window_action.c  txt_window_action.h
data/: .gitignore  CMakeLists.txt  M_EXTR.lmp  Makefile  Makefile.am  Makefile.in  PALFIX.pal  README  convert-icon  create-ico  rude.old.wad  rude.wad  sprinkled.icns
man/: .gitignore  CMDLINE.template  CMDLINE.template.md  CMakeLists.txt  INSTALL.template  Makefile  Makefile.am  Makefile.in  chocolate-server.6  chocolate-setup.6  cnserver.6  cnsetup.6  default.cfg.template  docgen  doom-options.in  doom.template  environ.man  environment  extra.cfg.template  foot  footer  head  header  heretic.template  hexen.template  iwad_paths.man  lemon-setup.6  manpage.template  server.template  setup.template  simplecpp  strawberry-server  strawberry-setup.6  strife.template  wikipages
man/bash-completion/: .gitignore  CMakeLists.txt  Makefile.am  chocolate-doom  doom.template  doom.template.in  heretic.template  heretic.template.in  hexen.template  hexen.template.in  strife.template  strife.template.in
midiproc/: .gitignore  CMakeLists.txt  Makefile.am  buffer.c  buffer.h  main.c  main.cpp  midiproc.acf  midiproc.idl  proto.h
opl/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  dbopl.c  dbopl.h  fmopl.c  fmopl.h  ioperm_sys.c  ioperm_sys.h  opl.c  opl.h  opl3.c  opl3.h  opl_internal.h  opl_linux.c  opl_obsd.c  opl_queue.c  opl_queue.h  opl_sdl.c  opl_timer.c  opl_timer.h  opl_win32.c  opl_win9x.c
opl/.deps/: dbopl.Po  ioperm_sys.Po  opl.Po  opl_linux.Po  opl_obsd.Po  opl_queue.Po  opl_sdl.Po  opl_timer.Po  opl_win32.Po
opl/examples/: .gitignore  Makefile  Makefile.am  Makefile.in  droplay.c
pcsound/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  pcsound.c  pcsound.h  pcsound_bsd.c  pcsound_internal.h  pcsound_linux.c  pcsound_sdl.c  pcsound_win32.c
pcsound/.deps/: pcsound.Po  pcsound_bsd.Po  pcsound_linux.Po  pcsound_sdl.Po  pcsound_win32.Po
pkg/: .gitignore  Makefile  Makefile.am  Makefile.in  config.make  config.make.in  style.html
pkg/osx/: .gitignore  AppController.h  AppController.m  Execute.h  Execute.m  GNUmakefile  IWADController.h  IWADController.m  IWADLocation.h  IWADLocation.m  Info-GNUstep.plist.in  Info.plist  (+11 more)
setup/: .gitignore  Makefile.am  chocolate-setup-res.rc.in  chocolate_setup_icon.c  compatibility.c  compatibility.h  configfile.c  configfile.h  display.c  display.h  execute.c  execute.h  joystick.c  joystick.h  keyboard.c  keyboard.h  mainmenu.c  mouse.c  mouse.h  multiplayer.c  multiplayer.h  setup-manifest.xml  setup-res.rc.in  setup_icon.c  sound.c  sound.h  testconfig.c  testconfig.h  txt_joybinput.c  txt_keyinput.c  txt_keyinput.h  txt_mouseinput.c  txt_mouseinput.h
src/: .gitignore  CMakeLists.txt  Doom.metainfo.xml.in  Doom_Screensaver.desktop.in  Heretic.desktop.in  Heretic.metainfo.xml.in  Hexen.desktop.in  Hexen.metainfo.xml.in  Makefile  Makefile.am  Makefile.in  Strife.desktop.in  Strife.metainfo.xml.in  a11y.c  a11y.h  aes_prng.c  aes_prng.h  am_map.c  am_map.h  b_base.c  b_bot.h  b_look.c  b_think.c  byteptr.c  byteptr.h  chocolate-doom-res.rc.in  chocolate-doom-screensaver.desktop  chocolate_doom_icon.c  cmake_install.cmake  cn_timer.c  cn_timer.h  cndoom.h  competition.c  convert-icon  crispy.c  crispy.h  d_dedicated.c  d_englsh.h  d_event.c  d_event.h  (+290 more)
textscreen/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  guitest.c  textscreen.h  txt_button.c  txt_button.h  txt_checkbox.c  txt_checkbox.h  txt_conditional.c  txt_conditional.h  txt_desktop.c  txt_desktop.h  txt_dropdown.c  txt_dropdown.h  txt_fileselect.c  txt_fileselect.h  txt_font.h  txt_gui.c  txt_gui.h  txt_inputbox.c  txt_inputbox.h  txt_io.c  txt_io.h  txt_label.c  txt_label.h  txt_largefont.h  txt_main.c  txt_main.h  txt_radiobutton.c  txt_radiobutton.h  txt_scrollpane.c  txt_scrollpane.h  txt_sdl.c  txt_sdl.h  txt_separator.c  (+16 more)
(+989 files in other folders)
