AC_INIT(Chocolate Doom, 0.0.1, fraggle@alkali.org, chocolate-doom)
AC_CONFIG_AUX_DIR(autotools)

orig_CFLAGS="$CFLAGS"

AC_PROG_CC

if test "$GCC" = "yes"
then
        CFLAGS="-O3 $orig_CFLAGS"
fi


AM_PATH_SDL(1.1.3)

AC_CHECK_LIB(SDL_mixer,Mix_LoadMUS,[
dnl    AC_DEFINE(HAVE_LIBSDL_MIXER)
    SDLMIXER_LIBS="$SDLMIXER_LIBS -lSDL_mixer"
],echo "*** Compiling without SDL_mixer installed probably won't work"
,$SDL_LIBS $SDLMIXER_LIBS)

AC_CHECK_LIB(SDL_net,SDLNet_UDP_Send,[
    SDLNET_LIBS="$SDLNET_LIBS -lSDL_net"
],echo "*** Compiling without SDL_net installed probably won't work"
,$SDL_LIBS $SDLNET_LIBS)


AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME,AC_PACKAGE_VERSION)

AM_CONFIG_HEADER(config.h:config.hin)

AC_SUBST(SDLMIXER_CFLAGS)
AC_SUBST(SDLMIXER_LIBS)

AC_SUBST(SDLNET_CFLAGS)
AC_SUBST(SDLNET_LIBS)

AC_SUBST(ac_aux_dir)

AC_OUTPUT([
Makefile
src/Makefile
])

